Resolve jump link and smooth scrolling issues

--- a/styles.less
+++ b/styles.less
@@ -192,6 +192,33 @@ footer {
   }
 }
 
+/* ---------------------------- LOCATION SELECTORS ---------------------------- */
+#location {
+  #map_canvas{
+    width: 100%;
+    height: 400px; 
+    #map-content > h1 { 
+      text-align: center;
+      margin: 0; 
+      font-size: 18px;
+      line-height: 28px; 
+      font-weight: 700;
+      font-family: 'Alegreya', Arial, serif;
+    } 
+    #map-content > h4 {
+      text-align: center;
+      padding-top: 8px;
+      margin: 0; 
+      font-size: 12px;
+      line-height: 20px;
+      font-family: 'Nunito', Arial, sans-serif;
+    }
+  }
+   
+}  
+
+/* ---------------------------- END LOCATION SELECTORS ---------------------------- */
+
 // Mobile device styles
 @media only screen and (max-width: 600px) {
   main, .desktop {
